# models_billing

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  openapi.json  openapi.yaml  pyproject.toml
backend/: Dockerfile  Dockerfile_worker  pyproject.toml
backend/models_billing/: crud.py  entrypoint.sh  main.py  models.py  schemas.py
backend/models_billing/core/: config.py  database.py  populate_db.py
backend/models_billing/inference_queue/: task.py  worker.py
backend/models_billing/services/: models_service.py  user_service.py
dash_frontend/: Dockerfile  app.py  dashboard.py  login.py  pyproject.toml  register.py
models_billing/: main.py  models.py  populate_db.py  schemas.py
models_billing/core/: config.py  database.py  populate_db.py  security.py
models_billing/services/: models_service.py  user_service.py
