[tool.poetry]
name = "models-billing"
version = "0.1.0"
description = ""
authors = ["Artem <ardan2076@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.23"
passlib = "^1.7.4"
redis = "^5.0.1"
rq = "^1.15.1"
psycopg2 = "^2.9.9"
numpy = "^1.26.3"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"

[tool.poetry.scripts]
run_backend = "models_billing.populate_db.py && uvicorn models_billing.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
