[tool.poetry]
name = "dash-frontend"
version = "0.1.0"
description = ""
authors = ["Artem <ardan2076@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
